<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:layout_margin="24dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/logo"
        android:text="@string/registration_page"
        android:textSize="24sp"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/normal"/>

    <LinearLayout
        android:id="@+id/customer_details"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:src="@drawable/customer"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="12sp"
            android:layout_gravity="center_vertical"
            android:text="@string/customer_account" />

    </LinearLayout>

    <Button
        android:id="@+id/customer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_as_customer"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/customer_details"
        android:background="@color/button"
        android:textColor="@color/textLight"/>

    <LinearLayout
        android:id="@+id/vendor_details"
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customer_button"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:src="@drawable/vendor"
            android:contentDescription="@string/app_name"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="12sp"
            android:layout_gravity="center_vertical"
            android:text="@string/vendor_account" />

    </LinearLayout>

    <Button
        android:id="@+id/vendor_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_as_vendor"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/vendor_details"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/textLight"/>


</RelativeLayout>