<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_margin="12dp"
    android:layout_height="match_parent"
    tools:context=".auth">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <ImageView
            android:layout_width="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="60dp"
            android:layout_margin="30dp"
            android:orientation="horizontal"
            android:layout_weight="0.5"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:text="@string/login"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/register"
                android:textColor="@color/textLight"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emailInput"/>

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:padding="15dp"
                android:inputType="textEmailAddress"
                android:layout_below="@+id/emailText"
                android:background="@color/textLight" />

            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inputEmail"
                android:layout_marginTop="20dp"
                android:text="@string/passwordInput"/>

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:padding="15dp"
                android:inputType="textPassword"
                android:layout_below="@+id/password"
                android:background="@color/textLight" />

            <Button
                android:id ="@+id/loginBtn"
                android:layout_marginTop="40dp"
                android:padding="15dp"
                android:text="@string/loginBtn"
                android:textColor="@color/textWhite"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:layout_below="@+id/passwordInput"/>
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
